// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteArticle should dispatch the deleteArticleError action if api requests failed 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "app/Article/DELETING_ARTICLE",
    },
    "channel": null,
  },
}
`;

exports[`deleteArticle should dispatch the deleteArticleError action if api requests failed 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "sample-slug",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`deleteArticle should dispatch the deleteArticleError action if api requests failed 3`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "app/Article/DELETE_ARTICLE_COMPLETED",
    },
    "channel": null,
  },
}
`;

exports[`deleteComment should dispatch the deleteCommentError action if api requests failed 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "app/Article/DELETING_COMMENT",
    },
    "channel": null,
  },
}
`;

exports[`deleteComment should dispatch the deleteCommentError action if api requests failed 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "sample-slug",
      "12312",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`deleteComment should dispatch the deleteCommentError action if api requests failed 3`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "commentId": "12312",
      "type": "app/Article/DELETE_COMMENT_COMPLETED",
    },
    "channel": null,
  },
}
`;

exports[`getArticle should dispatch the articleLoadingError action if api requests failed 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://conduit.productionready.io/api/articles/sample-slug",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getArticle should dispatch the articleLoadingError action if api requests failed 2`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "slug": "sample-slug",
      "type": "app/Article/GET_ARTICLE_SLUG",
    },
    "channel": null,
  },
}
`;

exports[`getArticle should dispatch the articleLoadingError action if api requests failed 3`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "article": undefined,
      "type": "app/Article/ARTICLE_LOADED",
    },
    "channel": null,
  },
}
`;

exports[`getComments should dispatch the commentsLoadingError action if api requests failed 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://conduit.productionready.io/api/articles/sample-slug/comments",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getComments should dispatch the commentsLoadingError action if api requests failed 2`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "comments": undefined,
      "type": "app/Article/COMMENTS_LOADED",
    },
    "channel": null,
  },
}
`;

exports[`postComment should dispatch the postCommentError action if api requests failed 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "type": "app/Article/POSTING_COMMENT",
    },
    "channel": null,
  },
}
`;

exports[`postComment should dispatch the postCommentError action if api requests failed 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "sample-slug",
      "sample-comment",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`postComment should dispatch the postCommentError action if api requests failed 3`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "comment": "sample-comment",
      "type": "app/Article/POST_COMMENT_COMPLETED",
    },
    "channel": null,
  },
}
`;
